created a products.html page that dynamically displays the producs based on the data passed in through the URL (updated urls found on index.html)
also I realize I should have probably made a separate branch for just random fixes but there are so many broken paths and small bugs that I just fixed during the process of adding this.

--- a/src/product_pages/northface-alpine-3.html
+++ b/src/product_pages/northface-alpine-3.html
@@ -66,18 +66,18 @@
           alt="Alpine Guide Tent - 3-Person, 4-Season"
         />
 
-        <p class="product-card__price">$349.99</p>
+        <p class="product-card-price">$349.99</p>
 
-        <p class="product__color">Canary Yellow/High Rise Grey</p>
+        <p class="product-color">Canary Yellow/High Rise Grey</p>
 
-        <p class="product__description">
+        <p class="product-description">
           Be ready for any outdoor adventure in low elevations and high-alpine
           environments alike with the hybrid design of The North Face&#39;s
           Alpine Guide four-season tent. It is made from durable, waterproof
           Featherlite NSL pole system and an easy to pitch design.
         </p>
 
-        <div class="product-detail__add">
+        <div class="product-detail-add">
           <button id="addToCart" data-id="985PR">Add to Cart</button>
         </div>
       </section>
