--- a/src/product_pages/marmot-ajax-3.html
+++ b/src/product_pages/marmot-ajax-3.html
@@ -66,17 +66,17 @@
           alt="Marmot Ajax tent"
         />
 
-        <p class="product-card__price">$199.99</p>
+        <p class="product-card-price">$199.99</p>
 
-        <p class="product__color">Pale Pumpkin/Terracotta</p>
+        <p class="product-color">Pale Pumpkin/Terracotta</p>
 
-        <p class="product__description">
+        <p class="product-description">
           Get out and enjoy nature with Marmot&#39;s Ajax tent, featuring a
           smart design with durable, waterproof construction and two doors for
           easy access.
         </p>
 
-        <div class="product-detail__add">
+        <div class="product-detail-add">
           <button id="addToCart" data-id="880RR">Add to Cart</button>
         </div>
       </section>
