--- a/src/product_pages/northface-talus-4.html
+++ b/src/product_pages/northface-talus-4.html
@@ -66,18 +66,18 @@
           alt="Talus Tent - 4-Person, 3-Season"
         />
 
-        <p class="product-card__price">$199.99</p>
+        <p class="product-card-price">$199.99</p>
 
-        <p class="product__color">Golden Oak/Saffron Yellow</p>
+        <p class="product-color">Golden Oak/Saffron Yellow</p>
 
-        <p class="product__description">
+        <p class="product-description">
           Enjoy a fun night under stars with your favorite people in The North
           Face&#39;s Talus four-person tent, featuring durable construction with
           a roomy interior, an advanced DAC Featherlite NSL pole system and an
           easy to pitch design.
         </p>
 
-        <div class="product-detail__add">
+        <div class="product-detail-add">
           <button id="addToCart" data-id="989CG">Add to Cart</button>
         </div>
       </section>
