--- a/src/product_pages/cedar-ridge-rimrock-2.html
+++ b/src/product_pages/cedar-ridge-rimrock-2.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="../css/style.css" />
 
-    <script src="../js/product.js" type="module"></script>
-    <script src="../js/modules/DisplayProducts.mjs" type="module"></script>
+    <script src="../js/product.js"></script>
+    <!-- <script src="../js/modules/DisplayProducts.mjs" type="module"></script> -->
 
   </head>
 
