--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -10,7 +10,7 @@
     <script src="../js/modules/cartCountBadge.mjs" type="module"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/checkout.js" type="module"></script>
-    <script src="../js/cart.js" type="module"></script>
+    <script src="../js/modules/ShoppingCart.mjs" type="module"></script>
 
 
   </head>
@@ -23,8 +23,8 @@
       <section class="products">
         <h2>Review & Place your Order</h2>
                 <ul class="product-list">
-
                 </ul>
+                <a href="##"><button id="checkout-button">Checkout</button></a>
       </section>
     </main>
 
