--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -15,6 +15,10 @@
     <header class="divider" id="main-divider">
     </header>
     <main class="divider">
+        <section class="products">
+            <h2>Top Products: <span id="product-category-span"></span></h2>
+            <ul class="product-list" id="productList"></ul>
+        </section>
     </main>
     <footer id="lower-divider">
     </footer>
