final local fixes
testing production

--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -1,33 +1,34 @@
 <!doctype html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
 
-    <title>Sleep Outside | Checkout</title>
-    <script src="../js/modules/cartCountBadge.mjs" type="module"></script>
-    <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/checkout.js" type="module"></script>
-    <script src="../js/cart.js" type="module"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Sleep Outside | Checkout</title>
+  <script src="../js/modules/cartCountBadge.mjs" type="module"></script>
+  <link rel="stylesheet" href="../css/style.css" />
+  <script src="/js/checkout.js" type="module"></script>
 
 
-  </head>
+</head>
 
-  <body>
-    <header class="divider" id="main-divider">
-    </header>
+<body>
+  <header class="divider" id="main-divider">
+  </header>
 
-    <main class="divider">
-      <section class="products">
-        <h2>Review & Place your Order</h2>
-                <ul class="product-list">
+  <main class="divider">
+    <section class="products">
+      <h2>Review & Place your Order</h2>
+      <ul class="product-list">
+      </ul>
+      <a href="##"><button id="checkout-button">Checkout</button></a>
+    </section>
+  </main>
 
-                </ul>
-      </section>
-    </main>
+  <footer id="lower-divider"></footer>
+</body>
 
-    <footer id="lower-divider"></footer>
-  </body>
 </html>
